--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -4,17 +4,27 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context=".MainActivity">
 
-    <item android:id="@+id/action_open_img"
-        android:title="@string/menu_open"
+    <item
+        android:id="@+id/action_open_img"
         android:orderInCategory="1"
+        android:title="@string/menu_open"
+        android:visible="false"
         app:showAsAction="never" />
-    <item android:id="@+id/action_process_image"
-        android:title="@string/menu_cut"
+    <item
+        android:id="@+id/action_process_image"
         android:orderInCategory="2"
+        android:title="@string/menu_cut"
+        android:visible="false"
         app:showAsAction="never" />
-    <item android:id="@+id/action_take_photo"
-        android:title="@string/menu_photo"
+    <item
+        android:id="@+id/action_reset"
+        android:orderInCategory="2"
+        android:title="Reset"
+        android:visible="false" />
+    <item
+        android:id="@+id/action_take_photo"
         android:orderInCategory="3"
+        android:title="@string/menu_photo"
         app:showAsAction="never" />
     <item
         android:id="@+id/action_get_gallery"
@@ -22,10 +32,28 @@
         android:title="@string/menu_gallery"
         android:visible="false"
         app:showAsAction="never" />
-    <item android:id="@+id/action_get_color"
-        android:title="@string/menu_color"
+    <item
+        android:id="@+id/action_healthy_home"
+        android:orderInCategory="4"
+        android:title="Healthy Home" />
+    <item
+        android:id="@+id/action_permacoat"
+        android:orderInCategory="7"
+        android:title="Permacoat" />
+    <item
+        android:id="@+id/action_acqua_epoxy"
         android:orderInCategory="5"
-        app:showAsAction="never" />
+        android:title="Acqua Epoxy" />
+    <item
+        android:id="@+id/action_cool_shades"
+        android:orderInCategory="5"
+        android:title="Cool Shades" />
+    <item
+        android:id="@+id/action_get_color"
+        android:icon="@drawable/ic_color_palette"
+        android:orderInCategory="5"
+        android:title="@string/menu_color"
+        app:showAsAction="ifRoom" />
     <item
         android:id="@+id/action_get_texture"
         android:orderInCategory="6"
